--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 		</p>
 		<h2>My other pages</h2>
 		<p>
-		<a href="H:/ICS/Web_development/23.html">Superpower </a>
-		</P>
+			<a href="23.html">Superpower </a>
+		</p>
 		<p>
-			<a href="H:/ICS/Web_development/man.html">Science</a>
+			<a href="man.html">Science</a>
 		</p>
  </body>
  </html>
