--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
- <html lang xml:lang>
+ <html lang lang="en">
      <head>
          <meta charset="UTF-8">
 	 <link rel="stylesheet" href="index.css" type="text/css">
          <title>superpower</title>
      </head>
-     <body>
+	<body>
 		<h1>Home Page </h1>
-        <h2>Welcome To my main page</h2>
+        	<h2>Welcome To my main page</h2>
 		<img src="monkey.jpg" width="236" height="236" alt="Cartoon monkey">
 		<p>
 			<a href="https://www.pinterest.com/pin/211528513721680151/">Where I got my image</a>
@@ -19,5 +19,5 @@
 		<p>
 			<a href="man.html">Science</a>
 		</p>
- </body>
+ 	</body>
  </html>
