--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
- <html lang lang="en">
+ <html lang="en">
      <head>
          <meta charset="UTF-8">
 	 <link rel="stylesheet" href="index.css" type="text/css">
