--- a/23.html
+++ b/23.html
@@ -1,8 +1,9 @@
 <!doctype html>
- <html lang xml:lang>
+ <html lang="en">
      <head>
          <meta charset="UTF-8">
          <title>superpower</title>
+	  <link rel="stylesheet" type="text/css" href="science.css">
      </head>
      <body>
 		<h1>My Superpower </h1>
