--- a/man.html
+++ b/man.html
@@ -16,7 +16,7 @@
 			<li> Physics</li>
 			<li> Biology</li>
 		</ol> 
-		<img src="H:/ICS/Web_development/atom.png" width="260" height="296" alt="a symbol of an atom">
+		<img src="atom.png" width="260" height="296" alt="a symbol of an atom">
 		<p> It is for the BACE inhibitor in mild-to-moderate Alzheimer’s after the external data monitoring committee concluded that the drug was a bust, with “virtually” no chance of success. A separate Phase III study in patients, set to read out in two years, will continue as investigators found no signs of safety issues. In general, science is all the effort made by people to get to know their surroundings, how it came to existence and how everything interacts with each other. It also includes understanding different systems of the universe including Earth, Space and even us Humans. </p>
 		<h2>Element Examples</h2>
 		<ul>
